update links again

--- a/members.html
+++ b/members.html
@@ -27,11 +27,11 @@ permalink: /members/
               <!-- Sub Teams -->
               <li class="filter" data-filter=".Leadership">Leadership</li>
               <li class="filter" data-filter=".Aerostructures">Aerostructures</li>
-              <li class="filter" data-filter=".Graphics/Manufacturing">Graphics/Manufacturing</li>
+              <li class="filter" data-filter=".Graphics-Manufacturing">Graphics/Manufacturing</li>
               <!-- <li class="filter" data-filter=".Structures">Structures</li> -->
-              <li class="filter" data-filter=".Piloting/Propulsion">Piloting/Propulsion</li>
+              <li class="filter" data-filter=".Propulsion-Piloting">Propulsion/Piloting</li>
               <!-- <li class="filter" data-filter=".Manufacturing">Manufacturing</li> -->
-              <li class="filter" data-filter=".Payload Systems">Payload Systems</li>
+              <li class="filter" data-filter=".Payload-Systems">Payload Systems</li>
               <!-- <li class="filter" data-filter=".Piloting">Piloting</li> -->
             </ul>
           </div>
@@ -90,7 +90,7 @@ permalink: /members/
                 </a>
               </li>
               <!-- Team Lead -->
-              <li class="mix Leadership Graphics/Manufacturing">
+              <li class="mix Leadership Graphics-Manufacturing">
               <!-- EMAIL IF TEAM LEAD -->
                 <a href="mailto:ahcanes@gmail.com">
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
@@ -107,7 +107,7 @@ permalink: /members/
                 </a>
               </li>
               <!-- Team Lead -->
-              <li class="mix Leadership Propulsion/Piloting">
+              <li class="mix Leadership Propulsion-Piloting">
               <!-- EMAIL IF TEAM LEAD -->
                 <a href="mailto:adbehale@gmail.com">
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
@@ -124,7 +124,7 @@ permalink: /members/
                 </a>
               </li>
               <!-- Team Lead -->
-              <li class="mix Leadership Payload Systems">
+              <li class="mix Leadership Payload-Systems">
               <!-- EMAIL IF TEAM LEAD -->
                 <!-- <a href="#"> -->
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
