--- a/archive.html
+++ b/archive.html
@@ -18,7 +18,7 @@ permalink: /archive/
       </div><!-- .col-md-7 close -->
       <div class="col-md-5 col-sm-12">
         <div class="block">
-          <img src="img/PaperAirplaneblur.jpg" alt="Img">
+          <img src="{{ site.baseurl }}/img/PaperAirplaneblur.jpg" alt="Img">
         </div>
       </div><!-- .col-md-5 close -->
     </div>
@@ -40,7 +40,7 @@ permalink: /archive/
         </div><!-- .col-md-7 close -->
         <div class="col-md-5 col-sm-12">
           <div class="block">
-            <img src="img/PaperAirplaneblur.jpg" alt="Img">
+            <img src="{{ site.baseurl }}/img/PaperAirplaneblur.jpg" alt="Img">
           </div>
         </div><!-- .col-md-5 close -->
       </div>
@@ -62,7 +62,7 @@ permalink: /archive/
     </div><!-- .col-md-7 close -->
     <div class="col-md-5 col-sm-12">
         <div class="block">
-        <img src="img/PaperAirplaneblur.jpg" alt="Img">
+        <img src="{{ site.baseurl }}/img/PaperAirplaneblur.jpg" alt="Img">
         </div>
     </div><!-- .col-md-5 close -->
     </div>
